--- a/config.json
+++ b/config.json
@@ -292,7 +292,7 @@
 			"thumbnail": "https://image.tmdb.org/t/p/original/2746UvsbkZINd873Yd3o3TxOwCP.jpg",
 			"poster": "https://image.tmdb.org/t/p/w342/nyy3BITeIjviv6PFIXtqvc8i6xi.jpg",
 			"quality": "HD",
-			"duration": "N/A",
+			"duration": "55",
 			"rating": "7.9",
 			"genre": "Mystery, Drama",
 			"releaseDate": "2025",
